# laser-plus-plus

./: .gitignore  .projections.json  CMakeLists.txt  README.md  bench.sh  bench2.txt  bench_conjunction.txt  bench_existential.txt  benchmark.txt  build.sh  das5_laser.sh  gen.py  gen_transitive.py  laser.sh  laser_py_bench.py  main.cpp  old_main.cpp  out_p5.txt  output.txt  restricted_chase_test.cpp  skolem_bench.sh  stream_file.txt
Laser/include/core/: program.h  reasoner.h
Laser/include/example/: example_rule_reader.h
Laser/include/formula/: formula.h
Laser/include/rule/: rule.h
Laser/include/service/: request_parser.h  service_manager.h
Laser/include/util/: grounding.h  read_exception.h  request_exception.h
Laser/src/core/: program.cpp  reasoner.cpp
Laser/src/example/: example_io_manager.cpp  example_parser.cpp
Laser/src/formula/: grounding_table.cpp
Laser/src/rule/: rule.cpp  shared.cpp
Laser/src/service/: query.cpp  request_parser.cpp  service_manager.cpp
Laser/src/util/: grounding.cpp  settings.cpp
Laser/test/: main.cpp
Laser/test/testcase/: test_framework.cpp
app_bench/: CMakeLists.txt  main.cpp
app_bench/include/: file_io_manager.h  file_parser.h  file_reader.h  file_writer.h
app_bench/src/: file_io_manager.cpp  file_writer.cpp
app_demo/: CMakeLists.txt  build.sh  debug.sh  gen_stream.py  main.cpp  run_demo.sh
app_demo/include/: file_io_manager.h  file_reader.h  file_writer.h
app_demo/samples/: output_query.txt  output_stream.txt  program_simple.laser  simple.stream  simple_query.txt
app_demo/src/: file_io_manager.cpp  file_parser.cpp  file_reader.cpp
app_simple/: debug.sh  main.cpp  output.txt  simpleapp.sh
app_simple/include/: simple_rule_reader.h
app_simple/samples/: out.txt
app_simple/src/: simple_rule_reader.cpp
app_test/: CMakeLists.txt
benchapp/: main.cpp
benchapp/include/: file_io_manager.h  file_parser.h  file_reader.h  file_writer.h
benchapp/src/: file_io_manager.cpp  file_parser.cpp  file_reader.cpp  file_writer.cpp
benchmark_results/: bench_atoms.txt
ignore_for_now/include/: conjunction.h  disjunction.h  exact_time.h  implication.h  negation.h  time_window.h
ignore_for_now/old_rule_reader/: default_rule_reader.cpp  default_rule_reader.h
include/acyclicity/: naive_smfa.h  shared.h
include/core/: io_manager.h  program.h  reasoner.h
include/example/: example_io_manager.h  example_parser.h  example_reader.h  example_rule_reader.h  example_writer.h
include/excetion/: format_exception.h  read_exception.h  request_exception.h  uninitialized_exception.h  write_exception.h
include/formula/: assignment_atom.h  condition_atom.h  formula.h  formula_type.h  grounding.h  grounding_table.h  groundingtable.h  math_atom.h  math_operator.h  pseudo_formula.h
include/formula/extended/: atom.h  box.h  conjunction.h  diamond.h  exact_time.h  existential.h  existential_restricted.h  math.h  time_reference.h  time_window.h  tuple_window.h
include/formula/math/: assignment.h
include/input/: data_input_manager.h  data_parser.h  data_reader.h  dataparser.h  input_manager.h  rule_input_manager.h  rule_parser.h  rule_reader.h
include/io/: data_atom.h  io_manager.h  rule_reader.h
include/output/: formater.h  output.h  output_manager.h  output_writer.h
include/program/: io_handler.h  predicate-information.h  predicate_information.h  program.h  strata.h  stratum.h
include/reasoner/: reasoner.h  sequential_reasoner.h
include/rule/: chase_filter.h  default_rule_reader.h  math_atom.h  rule.h  rule_body.h  rule_parser.h  rule_reader.h  share.h  shared.h
include/rule/filter/: indexed_filter.h  oblivious_filter.h  restricted_filter.h  skolem_filter.h
include/rule/math/: evaluator.h  evaluator_type.h  (+1 more)
include/service/: conjunctive_query.h  query.h  request.h  request_parser.h  request_type.h  service_manager.h
include/util/: chase_algorithm.h  data_atom.h  database.h  format_exception.h  global.h  grounding.h  settings.h  shared.h  string_pool.h  timeline.h  uninitialized_exception.h  write_exception.h
old_benchmarks/: bench1.txt
python/: gen.py
scripts/: gen.py
src/acyclicity/: naive_smfa.cpp  shared.cpp
src/core/: program.cpp  reasoner.cpp
src/example/: example_io_manager.cpp  example_parser.cpp  example_reader.cpp  example_rule_reader.cpp  example_writer.cpp
src/formula/: assignment_atom.cpp  condition_atom.cpp  gounding_table.cpp  grounding.cpp  grounding_table.cpp  math_atom.cpp
src/input/: data_input_manager.cpp  data_parser.cpp  data_reader.cpp  dataparser.cpp  input_manager.cpp  rule_input_manager.cpp  rule_parser.cpp  rule_reader.cpp
src/io/: data_atom.cpp
src/output/: formater.cpp  output.cpp  output_manager.cpp  output_writer.cpp
src/program/: io_handler.cpp  predicate-information.cpp  predicate_information.cpp  program.cpp  strata.cpp  stratum.cpp
src/reasoner/: reasoner.cpp  sequential_reasoner.cpp
src/rule/: default_rule_reader.cpp  math_atom.cpp  rule.cpp  rule_body.cpp  rule_parser.cpp  share.cpp  shared.cpp
src/service/: conjunctive_query.cpp  query.cpp  request_parser.cpp  service_manager.cpp
src/util/: data_atom.cpp  database.cpp  global.cpp  grounding.cpp  settings.cpp  shared.cpp  string_pool.cpp  timeline.cpp
test/: CMakeLists.txt  main.cpp
test/include/: simple_io_manager.h  simple_parser.h  simple_reader.h  simple_writer.h
test/src/: simple_io_manager.cpp  simple_parser.cpp  simple_reader.cpp  simple_writer.cpp
test/testcase/: algebra_test.cpp  assignment_test.cpp  atoms_test.cpp  box_test.cpp  condition_test.cpp  conjunction_test.cpp  diamond_test.cpp  exact_time.cpp  existential_test.cpp  indexed_chase_test.cpp  naive_smfa_test.cpp  recursive_test.cpp  restricted_chase_test.cpp  simple_test.cpp  skolem_chase_test.cpp  test_framework.cpp  test_framework.h  time_reference_test.cpp  time_window_test.cpp  tuple_window_test.cpp
testapp/: main.cpp
testapp/include/: simple_io_manager.h  simple_parser.h  simple_reader.h  simple_writer.h
testapp/src/: simple_formatter.cpp  simple_io_manager.cpp  simple_parser.cpp  simple_reader.cpp  simple_writer.cpp
(+61 files in other folders)
